# ocmapgen

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs
nodejs-client/: ocmapgen.js  package.json
nodejs-client/test/: multiple.js  simple.js
ocmapgen-bin/: Cargo.toml
ocmapgen-bin/src/: lib.rs  main.rs  msg.rs
src/: StandaloneCompat.c  easy.rs  ffi.rs  group.rs  lib.rs  mapgen.rs  mattex.rs  misc.rs  scenpar.rs
src/cpp-handles/: bindgen.h  group-handle.cpp  group-handle.h  log-handle.cpp  log-handle.h  mapgen-handle.cpp  mapgen-handle.h  material-handle.cpp  material-handle.h  random-handle.cpp  random-handle.h  scenpar-handle.cpp  scenpar-handle.h  texture-handle.cpp  texture-handle.h  version-handle.cpp  version-handle.h
