[package]
name = "ocmapgen-bin"
version = "0.4.0"
authors = ["Lukas Werling <lukas.werling@gmail.com>"]
edition = "2018"

[[bin]]
name = "ocmapgen"
path = "src/main.rs"

[dependencies]
clap = "2.22"
image = "0.23"
error-chain = "0.12"
notify = "4.0"

# For stdin/stdout control
serde = "0.9"
serde_derive = "0.9"
serde_cbor = "0.5"

[dependencies.ocmapgen]
path = ".."
